# qdimacs-splitter

./: .gitignore  Cargo.toml  LICENCE.txt  README.md  test-dumb.qdimacs  test.dimacs  test.qdimacs  test2.qdimacs
results/: hein_02_5x5-13.pg.qdimacs  hein_03_6x6-15.pg.qdimacs  hein_05_6x6-13.pg.qdimacs  hein_10_5x5-13.pg.qdimacs  hein_15_5x5-15.pg.qdimacs  hein_16_5x5-13.pg.qdimacs  hein_17_6x6-15.pg.qdimacs  hein_18_7x7-15.pg.qdimacs  hein_20_6x6-15.pg.qdimacs
src/: lib.rs  main.rs  qdimacs.pest
