[package]
name = "qdimacs_splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
pest = "2.0"
pest_derive = "2.0"
file-matcher = "0.7.0"
bitvec = "1.0.1"
regex = "1"
lazy_static = "1.4.0"

[profile.release]
lto = true